<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_developer"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_pro_black"
        android:gravity="center_horizontal"
        android:text="@string/developer_life"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_pro_light"
        android:text="@string/latest_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_developer" />

    <TextView
        android:id="@+id/latest_under_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_latest"
        app:layout_constraintStart_toStartOf="@id/tv_latest"
        app:layout_constraintTop_toBottomOf="@+id/tv_latest" />

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_pro_light"
        android:text="@string/top_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_hot"
        app:layout_constraintStart_toEndOf="@+id/tv_latest"
        app:layout_constraintTop_toBottomOf="@+id/title_developer" />

    <TextView
        android:id="@+id/top_under_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_top"
        app:layout_constraintStart_toStartOf="@id/tv_top"
        app:layout_constraintTop_toBottomOf="@+id/tv_top" />

    <TextView
        android:id="@+id/tv_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_pro_light"
        android:text="@string/hot_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_top"
        app:layout_constraintTop_toBottomOf="@+id/title_developer" />

    <TextView
        android:id="@+id/hot_under_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_hot"
        app:layout_constraintStart_toStartOf="@id/tv_hot"
        app:layout_constraintTop_toBottomOf="@+id/tv_hot" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_gif_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:elevation="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_developer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/gif_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/gif_title"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/post_description_background"
                android:fontFamily="@font/gotham_pro_light"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:textColor="@color/post_description"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/gif_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginBottom="60dp"
        android:id="@+id/material_reset_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="36dp"
        android:elevation="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/message_error"
        app:layout_constraintEnd_toStartOf="@id/material_next_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/material_reset"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_refresh_24"
            android:contentDescription="@string/gif_title" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginBottom="60dp"
        android:id="@+id/material_next_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="36dp"
        android:elevation="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/message_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/material_reset_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/material_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_baseline_skip_next_24"
            android:contentDescription="@string/gif_title" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/image_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:src="@drawable/ic_baseline_cloud_off_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/message_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/message_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_pro_light"
        android:text="@string/text_again_message"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
